--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Jan 10 13:26:17 EST 2020
-sdk.dir=C\:\\Users\\hmart\\AppData\\Local\\Android\\Sdk
+#Wed Feb 26 22:05:29 EST 2020
+sdk.dir=C\:\\Users\\subir\\AppData\\Local\\Android\\sdk
